package fr.zenika.zebra.antiphon.business;

public enum Format {
    MAGISTRAL, SMALL_GROUP, ONE_ON_ONE
}