package fr.zenika.zebra.antiphon.business;

public enum Level {
    UNKNOWN, BYNAME, SEEN, TRIED, PROJECT, MISSION, GREAT
}