package fr.zenika.zebra.antiphon.business;

import lombok.Value;

@Value
public class Skill {
    private final String name;
}