@startuml confidentialité
package individuals{
    class Individual{
        name:String
        surname:String
    }
}
package skills {
    class Skill{
        name:String
    }
    enum Level{
        UNKNOWN
        BYNAME
        SEEN
        TRIED
        PROJECT
        MISSION
        GREAT
    }
    class Wish{
        asTutor:boolean
    }
    enum Format{
        MAGISTRAL
        SMALL_GROUP
        ONE_ON_ONE
    }
}

Skill "*" --> "*" Individual
(Skill, Individual) .. Level

Skill "*" --> "*" Individual
(Skill, Individual) .. Wish

Format "1" <-right- Wish
package authent{
    class Credentials{
        email: String
        password: String
    }
}
Credentials -right-> Individual: profile
@enduml